<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".controller.CountActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:id="@+id/scoreRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="1dp">

            <TextView
                android:id="@+id/appName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:gravity="center_horizontal"
                android:padding="0dp"
                android:text="@string/app_name"
                android:textColor="@color/primary"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/scoreView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_weight="1"
                android:text="@string/score_text"
                android:textAlignment="center"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:id="@+id/topRowDice"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/countTopLeft"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:cropToPadding="false"
                android:layout_margin="5dp"
                app:srcCompat="@drawable/grey1">

            </ImageView>

            <ImageView
                android:id="@+id/countTopMid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:cropToPadding="false"
                android:layout_margin="5dp"
                app:srcCompat="@drawable/grey2">

            </ImageView>

            <ImageView
                android:id="@+id/countTopRight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:cropToPadding="false"
                android:layout_margin="5dp"
                app:srcCompat="@drawable/grey3">

            </ImageView>
        </TableRow>

        <TableRow
            android:id="@+id/bottomRowDice"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/countBottomLeft"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:cropToPadding="false"
                android:layout_margin="5dp"
                app:srcCompat="@drawable/grey4">

            </ImageView>

            <ImageView
                android:id="@+id/countBottomMid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:cropToPadding="false"
                android:layout_margin="5dp"
                app:srcCompat="@drawable/grey5">

            </ImageView>

            <ImageView
                android:id="@+id/countBottomRight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:cropToPadding="false"
                android:layout_margin="5dp"
                app:srcCompat="@drawable/grey6">

            </ImageView>
        </TableRow>

        <TableRow
            android:id="@+id/marginRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            >

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/count_rules_text" />

            <TextView
                android:id="@+id/choiceText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/choice_text"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:id="@+id/buttonRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            >

            <Button
                android:id="@+id/addButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:text="@string/add_button"
                android:textAlignment="center"
                android:textStyle="bold" />

            <Button
                android:id="@+id/nextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:text="@string/next_button"
                android:textAlignment="center"
                android:textStyle="bold" />

        </TableRow>

    </TableLayout>

</LinearLayout>